--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --color-dark: #202020;
   --color-dark-hex: #202020; /* if you want a separate variable for hex */
+  --color-hover: #2D2D2D;
 }
 
 
@@ -15,13 +16,11 @@
 }
 
 .sidebar{
-  border: 2px solid green;
   padding: 0.25rem;
   flex: 1;
 }
 
 .grid_view{
-  border: 2px solid blue;
   flex: 7;
 }
 
@@ -31,9 +30,7 @@
 }
 
 
-.searchBar *{
-  
-}
+
 
 .sidebar * {
 }
@@ -62,6 +59,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 1rem;
+  background: #2D2D2D;
 }
 
 .game_card {
@@ -110,3 +108,49 @@
 }
 
 
+
+.game_card_add{
+    position: relative;
+  margin: 1rem;
+  width: 100px; /* or whatever size you want */
+  height: 100px;
+  border: 2px solid white;
+   width: 105px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ADD GAME MENU */
+
+.game_add_menu{
+  display: flex;
+  border-radius: 12px;
+  position: absolute;
+  width: 40%;
+  height: 50%;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  min-width: 200px;
+  background: var(--color-dark);
+}
+
+.game_add_menu_poster{
+  background: var(--color-hover);
+  border-radius: 12px;
+  display: flex;
+  margin-top: 1rem;
+  min-height: 150px;
+  min-width: 150px;  
+  max-width: 300px;
+  width: 150px;
+  height: 250px;
+  /* or a fixed width */
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  
+}
