--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -251,6 +251,28 @@
 
 .game_menu{
   padding: 1rem;
-  margin-top: 1rem;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 420px;
+}
+
+.game_menu .image_container> img {
+  height: 350px;
+  width: 250px;
+}
+
+.game_menu * {
+  font-size: x-large;
+
+}
+.game_menu > .delete_btn{
+  background: rgb(173, 25, 25);
+  width: auto;
+  border-radius: 5rem;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10rem;
 }
