--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -5,15 +5,22 @@
   --color-hover: #2D2D2D;
 }
 
-
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
 
 .container{
   display: flex;
   flex-direction: row;
   background: var(--color-dark);
+  height: 100vh;
   width: 100vw;
-  height: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+  
 }
 
 .sidebar{
@@ -23,7 +30,7 @@
 }
 
 .grid_view{
-  flex: 7;
+  flex: 6;
 }
 
 .main_component{
@@ -69,6 +76,7 @@
   background: #2D2D2D;
   gap: 0px;
   align-content: flex-start;
+  
 }
 
 .game_card {
@@ -275,4 +283,49 @@
   align-items: center;
   justify-content: center;
   margin-left: 10rem;
+}
+
+
+.sort-bar_container{
+  margin-top: 1rem;
+  width: 100vw;
+  
+}
+
+
+.sort-bar {
+  display: flex;
+  gap: 20px;
+  font-family: system-ui, sans-serif;
+  font-size: 14px;
+}
+
+
+
+.sort_button{
+  border-radius: 2rem;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sort_button:hover{
+  background: var(--color-hover);
+}
+
+.sort-bar>select{
+  outline: none;
+  border: none;
+  border-radius: 0.5rem;
+  background: none;
+  color: white;
+}
+
+.sort-bar>select *{
+  background: var(--color-dark);
+}
+.sort-bar>select>option:hover{
+  background: var(--color-hover);
 }
