--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -339,3 +339,37 @@ html, body {
   gap: 0px;
   align-content: flex-start;
 }
+
+.grid_view{
+  background-color: #2d3436;
+background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
+}
+
+.sidebar{
+}
+
+
+.list_item_parent_container{
+  display: flex;
+  flex-direction: column;
+}
+.list_item_parent_container >.list_item{
+  
+}
+
+.list_item.selected{
+  background: #2D2D2D;
+  cursor: default;
+}
+.selected{
+  background: #2D2D2D;
+  cursor: default;
+}
+.list_item, .list_item_parent_container {
+  background: #202020;
+  cursor: pointer;
+}
+
+.list_item_child{
+  margin-left: 1.5rem;
+}
