--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -380,3 +380,54 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 .flex{
   display: flex;
 }
+* {
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+}
+
+.game_add_menu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.mobile_stepper{
+  width: 100%;
+}
+
+.mobile_stepper {
+           
+}
+.game_add_menu_poster{
+  width: 130px !important;
+  height: 200px !important;
+}
+
+.game_add_menu_poster{
+  margin-right: auto;
+}
+.game_add_menu_title{
+  margin-right: auto;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.input_box{
+   display: flex;
+  border-radius: 12px;
+  position: absolute;
+  width: 40%;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  flex-direction: column;
+  background: var(--color-dark);
+  z-index: 2;
+}
+
+.input_suggestions_container{
+  display: flex;
+  flex-direction: row;
+  border: 1px solid white;
+}
