--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -461,3 +461,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
   font-weight: bold;
   font-size: xx-large;
 }
+
+.suggestion{
+  background: var(--color-dark);
+}
