--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -438,6 +438,7 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
   max-height: 400px;
 
   overflow-y:scroll;
+  scroll-behavior: var(--color-hover);
   
 }
 
@@ -464,4 +465,19 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 
 .suggestion{
   background: var(--color-dark);
+}
+
+.input_suggestions_container{
+}
+
+/* Remove scrollbar arrows (WebKit) */
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+
+.input_manual{
+  background: var(--color-dark);
+  width: 100px;
+  border-radius: 4px;
 }
