--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -464,7 +464,6 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 .input_box_input{
   border: none;
   padding: 0.4rem;
-  border-radius: 4px;
   font-size: medium;
   
 }
@@ -494,7 +493,6 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 .input_manual{
   background: var(--color-dark);
   width: 100px;
-  border-radius: 4px;
 }
 
 
@@ -533,9 +531,9 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  border-radius: 4px;
-  background: inherit;
+  width: 45px;
+  background: rgb(59, 59, 59);
+  
 }
 .input_manual:hover{
   background: var(--color-hover);
