--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -544,3 +544,11 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
   background: var(--color-hover);
   cursor: pointer;
 }
+
+
+.game_poster{
+  width: 150px !important;
+  height: 200px !important;
+  border-radius: 12px;
+  padding: 1rem;
+}
