--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -571,6 +571,10 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 .edit_image_game_poster:hover{
   color: rgb(150, 144, 144);
 }
+.game_poster_container{
+  min-width: 150px;
+  min-height: 200px;
+}
 
 .add_game_submit{
   display: flex;
@@ -633,9 +637,15 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
   max-width: 105px;
   width: 105px;
 }
+.game_poster_container{
+  
+}
 .game_poster{
   width: 182px;
   height: 232px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #game_poster_add{
   min-width: 150px !important;
