--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -645,7 +645,7 @@ display: flex;
 }
 .game_poster{
   width: 182px;
-  height: 232px;
+  max-height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -659,4 +659,22 @@ display: flex;
   font-weight: lighter;
 }
 body * {
+}
+.poster_and_details_container{
+  min-height: 256px;
+}
+
+
+.game_poster_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.game_card_add{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
