--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -67,7 +67,7 @@ html, body {
   cursor: pointer;
 }
 .list_item>.list_item_title{
-  margin-left: 1.5rem;
+  margin-left: 1rem;
 }
 .list_item>.list_item_icon{
   margin-top: 10px;
@@ -369,7 +369,10 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 }
 
 .list_item.selected{
-  background: #2D2D2D;
+  /* background: #2D2D2D; */
+  color: #fff;
+  background: inherit;
+  font-weight: 500;
   cursor: default;
 }
 .selected{
@@ -753,7 +756,8 @@ body{
 .grid_view {
   display: flex;
   flex-wrap: wrap; /* This is key to wrapping */
-  gap: 1rem;        /* Adjust spacing between cards */
+  gap: 1rem;
+  gap: 0.5rem;        /* Adjust spacing between cards */
   padding: 1rem;
   justify-content: flex-start; /* Align cards to the left */
   row-gap: 2rem;
@@ -761,6 +765,9 @@ body{
 .grid_view {
   overflow-x: hidden;
   box-sizing: border-box;
+  overflow-y: scroll;
+  overflow-y: auto;
+  
 }
 
 .game_card {
@@ -769,3 +776,52 @@ body{
   flex-shrink: 0;
 }
 
+html, body {
+  height: 100%;
+}
+.container {
+  height: 100vh;
+  overflow-y: hidden;
+}
+.list_item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2rem;
+  cursor: pointer;
+}
+.list_item_icon{
+  margin-bottom: 3px;
+  margin-left: 0.5rem;
+}
+
+
+.list_item_count{
+  margin-left: 4px;
+  background: #5F5F61;
+  color: var(--backloggd-bg);
+  font-weight:500;
+  padding: 1px;
+  border-radius: 4px;
+
+}
+
+.list_header{
+  color: #4F5052;
+  margin-top: 3rem;
+  margin-bottom:0.5rem;
+  font-weight: bold;
+  margin-left: 10px;
+  
+}
+.list_item{
+  
+}
+.searchBar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.sidebar{
+  background: linear-gradient(#151618, var(--color-hover), black);
+}
