changed footer star color

--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -913,6 +913,7 @@ body * {
   display: flex;
   align-items: center;
   justify-content: left;
+  color: rgb(80, 80, 78);
 }
 .grid_view{
   row-gap: 1rem;
