--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -1107,17 +1107,31 @@ textarea {
   width: 100%;
   border-radius: 0px;
   color: white;
-  background: rgb(197, 23, 32);
+  background: rgb(102, 52, 128);
   border-radius: 4px;
   font-weight: 400;
 }
+.edit_button>
 .edit_delete{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 0.25rem;
+}
+.edit_button_content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .edit_delete>span {
   position: relative;
   top: 10%;
+}
+
+.game_menu_game_details_footer{
+  background: var(--color-dark);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0;
 }
