--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -1303,3 +1303,13 @@ textarea {
   margin-top: 0.25rem;
   
 }
+
+.footer_rating *{
+  display: flex;
+  align-items: center;
+}
+
+.footer_favorite {
+  margin-left: auto;
+  margin-right: 1rem;
+}
